add: EventImageServiceTest